[project]
authors = [
    {name = "David M. Rogers", email = "predictivestatmech@gmail.com"}
]
name = "psik_api"
version = "2.0.1"
description = "API for a portable submission interface for batch jobs."
license = "BSD-3-Clause"
readme = "README.md"

requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi>=0.120.1,<0.121.0",
    "uvicorn>=0.23.2,<1.0",
    "aiohttp>=3.8.5,<4.0",
    "python-multipart>=0.0.6,<0.1.0",
    "psik>=2.0.0,<3.0",
    "importlib-metadata>=6.8.0,<7.0",
    "certified>=0.10,<2.0",
    "biscuit-python>=0.4.0",
]

[project.urls]
repository = "https://github.com/frobnitzem/psik_api"
homepage = "https://frobnitzem.github.io/psik_api"

[dependency-groups]
dev = [
    "pytest>=7.0,<8.0",
    "httpx>=0.24.1,<1.0",
    "pytest-cov>=4.1.0,<5.0",
    "mypy>=1.5.1",
]


[tool.mypy]
exclude = [".venv", "docs", "dist"]

[tool.coverage.run]
include = ["psik_api/*"]
omit = [
  "tests/*",
  "venv/*",
  ".*",
  ".venv/*",
]
dynamic_context = "test_function"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["psik_api"]
exclude = ["tests", "docs", "examples"]
